--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.5",
+    "expo-print": "~14.0.3",
     "expo-router": "^3.1.0",
     "expo-sharing": "~13.0.1",
     "expo-splash-screen": "~0.29.22",
