--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo": "^52.0.37",
     "expo-asset": "~11.0.4",
     "expo-blur": "~14.0.3",
+    "expo-build-properties": "^0.13.2",
     "expo-constants": "~17.0.5",
     "expo-dev-client": "~5.0.12",
     "expo-font": "~13.0.3",
